Wed Dec 12 15:01:33 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_set_tab_label): keep in sync
	with insert_page_menu.  Code duplication is bad.

	* gtk/gtklabel.c (gtk_label_mnemonic_activate): Whoops -- got the
	wrong fix yesterday.

Wed Dec 12 14:27:30 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenubar.c (window_key_press_handler): Fix check for
	modifiers.

2001-12-12  James Henstridge  <james@daa.com.au>

	* gtk/gtkmenu.c (gtk_menu_key_press): check GTK_MENU_ITEM
	(menu_item)->accel_path first when looking up the accel path.

Tue Dec 11 19:18:21 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/testgtk.c (layout_expose_handler): Only draw
	for events on the bin window.

Tue Dec 11 18:55:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtklabel.c (gtk_label_mnemonic_activate): Small fix to let
	mnemonics work with notebooks.

Tue Dec 11 15:25:06 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Change
	bin_window to be located at y=TREE_VIEW_HEADER_HEIGHT(tree_view).
	Makes some flicker while scrolling go away.

2001-12-11  Michael Natterer  <mitch@gimp.org>

	* demos/testpixbuf-save.c: added new keyboard shortcut 'a' which
	adds alpha to the pixbuf; re-load the saved pixbuf and
	pixel-by-pixel compare it with the original one.

Tue Dec 11 15:39:08 2001  Soeren Sandmann  <sandmann@daimi.au.dk>

	* ChangeLog: Fix wrong ChangeLog entry
	* gtk/gtkstyle.c (gtk_default_draw_shadow_gap): Fix drawing of top
	right corner

2001-12-10  jacob berkman  <jacob@ximian.com>

	* gdk/x11/gdkinput-xfree.c (_gdk_input_grab_pointer): 
	* gdk/x11/gdkmain-x11.c (gdk_pointer_grab): 
	(gdk_keyboard_grab): do not grab things if the nograb debug flag
	is set

	* gdk/gdkinternals.h: 
	* gdk/gdk.c: add nograbs debug flag to disable grabs of the
	keyboard / mouse

Mon Dec 10 19:42:29 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (validate_rows_handler): stupid bug where I